--- a/css/hexo-theme-yun.css
+++ b/css/hexo-theme-yun.css
@@ -354,7 +354,7 @@ input {
   height: 100vh;
 }
 #banner .char {
-  font-family: 'PingFang SC', 'Microsoft YaHei', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
+  font-family: 'Songti SC', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
   font-size: var(--banner-char-size, 1rem);
   font-weight: 900;
   background-color: var(--banner-char-bg-color);
@@ -806,7 +806,7 @@ input {
   padding-left: 0.6rem;
 }
 .link-url .link-blog {
-  font-family: 'PingFang SC', 'Microsoft YaHei', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
+  font-family: 'Songti SC', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
   font-weight: 900;
   margin: 0.42rem 0;
 }
@@ -1495,7 +1495,7 @@ input {
   padding: 10px;
   font-size: 1.5rem;
   font-weight: 900;
-  font-family: 'PingFang SC', 'Microsoft YaHei', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
+  font-family: 'Songti SC', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
 }
 .post-header .post-title .icon {
   width: 1.6rem;
@@ -1783,7 +1783,7 @@ input {
   line-height: 1.8;
   padding: 1rem;
   font-size: 1.1rem;
-  font-family: 'PingFang SC', 'Microsoft YaHei', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
+  font-family: 'Songti SC', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
 }
 .post-toc ol {
   list-style: none;
@@ -1981,7 +1981,7 @@ input {
 }
 .site-name {
   color: var(--hty-text-color);
-  font-family: 'PingFang SC', 'Microsoft YaHei', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
+  font-family: 'Songti SC', 'Noto Serif SC', STZhongsong, STKaiti, KaiTi, Roboto, serif;
   font-weight: 900;
 }
 .site-subtitle {
